# test-api

./: Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: build-and-push.yaml
src/: db.rs  error.rs  log.rs  main.rs  model.rs
src/web/: create_entry.rs  delete_entry.rs  mod.rs  query_entry.rs  routes_entry.rs  scan_entries.rs
static/: openapi.json  openapi.yaml
