[package]
name = "test-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_dynamo = {version = "^4.2.7", features = ["aws-sdk-dynamodb+1"]}
tokio = { version = "1.36.0", features = ["full"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1.16.0", features = ["behavior-version-latest"] }
lambda_http = "0.10.0"
chrono = "0.4.34"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
serde_with = "3.6.1"
tower-http = { version = "0.5.2", features = ["fs"] }
